# Olio-ohjelmat_kevat2025

./: README.md  olio_vk1_teht1.cpp
olio_vk2_teht1/: CMakeLists.txt  game.cpp  game.h  main.cpp
olio_vk3_teht1/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
olio_vk4_teht1/: CMakeLists.txt  asiakas.cpp  luottotili.cpp  main.cpp  pankkitili.cpp
olio_vk5_tehtava/: CMakeLists.txt  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp
olio_vk6_tehtava/: CMakeLists.txt  main.cpp  student.cpp  student.h
olio_vk7_tehtava/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
olio_vk8_tehtava/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
